added submit form to Book page
submit form to book page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -202,3 +202,55 @@ a:hover {
 
 /* the following code is for pages About.html & Book.html */
 
+
+.about-container {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
+    grid-gap: 10px;
+    grid-auto-flow: dense;
+    margin: 10px;
+    padding: 10px;
+    background-color: #e5b9b9;
+    color: rgb(130, 34, 34);
+    font-size: 25px;
+    text-align: center;
+    border-radius: 10px;
+    -webkit-backdrop-filter: blur(5px) saturate(1.8);
+    backdrop-filter: blur(5px) saturate(1.8);
+}
+
+
+
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  input[type=submit]:hover {
+    background-color: #45a049;
+  }
+  
+  div {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
+
+
